# session-state-explorer-logic

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
.github/workflows/: tests.yml
.streamlit/: config.toml
data/eval/: curated_filenames.csv  medleydb_instruments.csv  results.json
data/examples/: README.md  example_channel_strip_notes.csv  example_session_manifest.json  placeholder.md
docs/: BASELINE_BEHAVIOR.md  REPO_AUDIT.md  demo_script.md  evaluation.md  logic_export_instructions.md  research_context.md
eval/: benchmark_role_inference.py  build_medleydb_dataset.py
fixtures/baseline/: demo_full_bundle.json  demo_graph.json
src/logic_session_evidence_explorer/: __init__.py  aaf_adm_inspector.py  app.py  audio_descriptors.py  cli.py  demo.py  export.py  graph_builder.py  logic_catalog.py  manifest_loader.py  matching.py  midi_inspector.py  models.py  musicxml_inspector.py  observation_model.py  recommendations.py  role_inference.py  session_builder.py  signal_comparisons.py  stem_scanner.py  utils.py  visualization.py
src/logic_session_evidence_explorer/canonical/: __init__.py  schema.py  validation.py
tests/: test_app_ui.py  test_audio_descriptors.py  test_baseline.py  test_benchmark.py  test_canonical_export.py  test_canonical_schema.py  test_cli.py  test_full_demo.py  test_graph_builder.py  test_logic_catalog.py  test_manifest_loader.py  test_matching.py  test_observation_model.py  test_recommendations.py  test_role_inference.py  test_signal_comparisons.py  test_stem_scanner.py  test_visualization.py
(+3 files in other folders)
