[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logic-session-evidence-explorer"
version = "0.1.0"
description = "Interpretable DAW-state graphs from Logic Pro exports and partial session evidence."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Logic Session Evidence Explorer contributors" }]
keywords = [
    "music-technology", "daw", "logic-pro", "interpretability",
    "audio-descriptors", "session-graph", "human-centered-ai",
]

dependencies = [
    "streamlit>=1.32",
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "networkx>=3.0",
    "pyvis>=0.3.2",
    "plotly>=5.18",
    "librosa>=0.10",
    "soundfile>=0.12",
    "mido>=1.3",
    "music21>=9.1",
    "pyloudnorm>=0.1.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
logic-session-evidence-explorer = "logic_session_evidence_explorer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
